--- a/content/publication/huang2008amultistability/cite.bib
+++ b/content/publication/huang2008amultistability/cite.bib
@@ -1,4 +1,4 @@
-@article{huang2008multistability,
+@article{huang2008amultistability,
   title={Multistability of neural networks with discontinuous activation function},
   author={Huang, Gan and Cao, Jinde},
   journal={Communications in Nonlinear Science and Numerical Simulation},
