--- a/content/publication/huang2008bmultistability/cite.bib
+++ b/content/publication/huang2008bmultistability/cite.bib
@@ -1,4 +1,4 @@
-@article{huang2008multistability,
+@article{huang2008bmultistability,
   title={Multistability in bidirectional associative memory neural networks},
   author={Huang, Gan and Cao, Jinde},
   journal={Physics Letters A},
