--- a/content/publication/huang2008parameter/cite.bib
+++ b/content/publication/huang2008parameter/cite.bib
@@ -1,4 +1,4 @@
-@article{黄淦2008对参数不确定神经网络的鲁棒状态估计,
+@article{huang2008parameter,
   title={对参数不确定神经网络的鲁棒状态估计},
   author={黄淦 and 曹进德},
   journal={吉首大学学报 (自然科学版)},
