--- a/content/publication/liu2009common/cite.bib
+++ b/content/publication/liu2009common/cite.bib
@@ -1,4 +1,4 @@
-@article{刘广权2009共空域模式方法在多类别分类中的应用,
+@article{Liu2009common,
   title={共空域模式方法在多类别分类中的应用},
   author={刘广权 and 黄淦 and 朱向阳},
   journal={中国生物医学工程学报},
