--- a/content/publication/huang2009common/cite.bib
+++ b/content/publication/huang2009common/cite.bib
@@ -1,4 +1,4 @@
-@article{黄淦2009共同空间模式在少通道分类问题中的应用,
+@article{huang2009Common,
   title={共同空间模式在少通道分类问题中的应用},
   author={黄淦 and 刘广权 and 朱向阳},
   journal={中国生物医学工程学报},
