--- a/content/publication/liang2021eegfusenet/cite.bib
+++ b/content/publication/liang2021eegfusenet/cite.bib
@@ -1,6 +1,8 @@
 @article{liang2021eegfusenet,
   title={EEGFuseNet: Hybrid Unsupervised Deep Feature Characterization and Fusion for High-Dimensional EEG with An Application to Emotion Recognition},
   author={Liang, Zhen and Zhou, Rushuang and Zhang, Li and Li, Linling and Huang, Gan and Zhang, Zhiguo and Ishii, Shin},
-  journal={arXiv preprint arXiv:2102.03777},
+  journal={IEEE Transactions on Neural Systems and Rehabilitation Engineering},
+  volume={21},
+  pages={1913--1925},
   year={2021}
 }
